# cmis_resilience_games

./: .gitignore  README.md  pyproject.toml
configs/buldyrev2010/: er_default.yaml  italy_case_study.yaml  sf_default.yaml
docs/: design_cmis_senario_games.md  scenario_buldyrev2010.md  scenarios_overview.md  sim_contribution_design_v1.md  system_design_resilience_game.md
docs/papers/: README.md
docs/papers/_template/: 01_paper_overview.md  02_real_world_model.md  03_framework_mapping.md  99_notes_todo.md
docs/papers/buldyrev2010/: 01_paper_overview.md  02_real_world_model.md  03_framework_mapping.md  99_notes_todo.md  index.md
docs/papers/buldyrev2010/original/: Buldyrev2010.txt
docs/papers/smith2019/: 01_paper_overview.md  02_real_world_model.md  03_framework_mapping.md  index.md
docs/papers/smith2019/original/: smith2019.txt
examples/: virtual_lifeline_network.ipynb
experiments/buldyrev2010/: er_pc_sweep.yaml  node_importance_shapley.yaml
sim_contribution/: README.md
src/cmis_senario_games/: __init__.py  run_experiment.py
src/cmis_senario_games/cli/: beta_eta_demo.py  buldyrev_plot_defense_example.py
src/cmis_senario_games/coop/: __init__.py  interaction_index.py  shapley.py
src/cmis_senario_games/core/: __init__.py  cascade_engine.py  contribution_lexcel.py  contribution_shapley.py  experiment_runner.py  fragility.py  game.py  graph.py  hazard.py  interdependency.py  io_config.py  io_results.py  network_model.py  percolation.py  reinforcement.py  simulation.py  value_functions.py
src/cmis_senario_games/scenarios/: __init__.py
src/sim_contribution/: __main__.py  algorithms.py  bitmask.py  cli.py  coalitions.py  model.py  oracle.py  plotting.py  simulate.py
tests/: test_smoke.py
(+6 files in other folders)
