[tool.poetry]
name = "sim-contribution"
version = "0.1.0"
description = "Observation-log-based team formation simulation (UD/DU/Random) with pair synergy, coordination cost, and skill complementarity."
authors = ["OpenAI Codex CLI"]
readme = "README.md"
packages = [{ include = "sim_contribution", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
pandas = "^2.2.0"
matplotlib = "^3.10.0"

[tool.poetry.scripts]
sim-contribution = "sim_contribution.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
pyright = "^1.1.390"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
